Remove unused imports

--- a/package.json
+++ b/package.json
@@ -45,9 +45,5 @@
   "resolutions": {
     "typescript": "^4.7.4"
   },
-  "private": true,
-  "dependencies": {
-    "@mui/icons-material": "^5.8.4",
-    "react-collapsed": "^3.3.2"
-  }
+  "private": true
 }
