--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -72,7 +72,7 @@
     "ts-node": "^10.3.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
