--- a/packages/apollo-schemas/package.json
+++ b/packages/apollo-schemas/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.1.0",
   "private": true
