--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -22,7 +22,7 @@
     "mobx-state-tree": "^5.1.5",
     "mongoose": "^6.2.10",
     "rimraf": "^3.0.2",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "@mui/material": "^5.9.1",
