--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -92,7 +92,7 @@
     "start-server-and-test": "^1.11.7",
     "ts-node": "^10.3.0",
     "tss-react": "^3.7.1",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.1.0",
   "private": true
