Dependency and JBrowse upgrades (#127)
* Upgrade to nestjs v9

* Upgrade to JB2 2 and MUI 5

* Upgrade more dependencies

* Update deps in lockfile

* Re-work package.json scripts

* Better interaction between different builds

* Update yarn and un-pin typescript

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,15 +1,19 @@
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-
-yarnPath: .yarn/releases/yarn-3.1.0.cjs
-
 packageExtensions:
+  chalk@5.0.1:
+    dependencies:
+      "#ansi-styles": "npm:ansi-styles@6.1.0"
+      "#supports-color": "npm:supports-color@9.2.2"
   mobx-react@*:
     peerDependencies:
       react-dom: "*"
   mongoose-id-validator@*:
     peerDependencies:
       mongoose: "*"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+
+yarnPath: .yarn/releases/yarn-3.2.2.cjs
