--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "description": "Monorepo containing Apollo front and back end code",
   "version": "0.0.1",
   "repository": "git@github.com:GMOD/jbrowse-plugin-apollo.git",
-  "packageManager": "yarn@3.1.0",
+  "packageManager": "yarn@3.2.2",
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
     "lint": "eslint --report-unused-disable-directives --max-warnings 0 --ext .js,.ts,.jsx,.tsx .",
     "build:shared": "yarn workspace apollo-shared run build",
-    "build:shared:cjs": "yarn workspace apollo-shared run build:cjs",
-    "build:shared:esm": "yarn workspace apollo-shared run build:esm"
+    "start:shared": "yarn workspace apollo-shared run start",
+    "start:server": "yarn workspace apollo-collaboration-server run start",
+    "start:plugin": "yarn workspace jbrowse-plugin-apollo run start",
+    "start": "npm-run-all --print-label --parallel start:shared start:server start:plugin"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -34,13 +36,14 @@
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
     "jest": "^27.3.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "prettier-plugin-import-sort": "^0.0.7",
     "react": "^17.0.2",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "resolutions": {
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "private": true
 }
