--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -8,11 +8,12 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "yarn build:shared:cjs && rimraf dist && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "yarn build:shared:cjs && NODE_ENV=development nest start",
-    "start:dev": "yarn build:shared:cjs && NODE_ENV=development nest start --watch",
-    "start:debug": "yarn build:shared:cjs && NODE_ENV=development nest start --debug --watch",
+    "build": "yarn build:shared && rimraf dist && nest build",
+    "start": "yarn build:shared && yarn start:nest --watch",
+    "start:nest": "NODE_ENV=development nest start",
+    "start:no-watch": "yarn build:shared && yarn start:nest",
+    "start:debug": "yarn build:shared && yarn start:nest --debug --watch",
     "deb": "ts-node-dev src/main.ts",
     "start:prod": "NODE_ENV=production node dist/main",
     "test": "jest",
@@ -22,22 +23,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@casl/ability": "^5.4.3",
     "@gmod/gff": "^1.2.0",
-    "@nestjs/common": "^8.2.3",
-    "@nestjs/config": "^1.0.3",
-    "@nestjs/core": "^8.0.11",
-    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/common": "^9.0.4",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.4",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.0.2",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.4",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
-    "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
-    "mobx": "^5.10.1",
-    "mobx-react": "^6.0.0",
+    "mobx": "^6.6.1",
+    "mobx-react": "^7.2.1",
     "mongoose": "^6.2.6",
     "mongoose-id-validator": "^0.6.0",
     "multer": "^1.4.4",
@@ -47,9 +46,7 @@
     "prop-types": "^15.0.0",
     "react-dom": "^17.0.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
-    "string-builder": "^0.1.8",
     "tslib": "^2.3.1",
     "uuid": "^8.3.2"
   },
@@ -67,6 +64,7 @@
     "@types/uuid": "^8",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
@@ -74,7 +72,7 @@
     "ts-node": "^10.3.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
