--- a/packages/apollo-schemas/package.json
+++ b/packages/apollo-schemas/package.json
@@ -6,8 +6,8 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@nestjs/common": "^8.2.3",
-    "@nestjs/core": "^8.0.11",
+    "@nestjs/common": "^9.0.4",
+    "@nestjs/core": "^9.0.4",
     "@nestjs/mongoose": "^9.0.2",
     "mongoose": "^6.2.6",
     "reflect-metadata": "^0.1.13",
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.1.0",
   "private": true
