--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -1,41 +1,35 @@
 {
   "name": "apollo-shared",
   "main": "./dist/index.js",
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./esm/index.js",
-      "require": "./dist/index.js"
-    }
-  },
   "scripts": {
-    "build": "yarn build:cjs && yarn build:esm",
-    "build:cjs": "tsc --build",
-    "build:esm": "tsc --project ./tsconfig.esm.json"
+    "start": "tsc --build --watch",
+    "build": "yarn clean && tsc --build",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/core": "^1.7.4",
-    "@nestjs/common": "^8.4.4",
+    "@jbrowse/core": "^2.0.1",
     "apollo-schemas": "workspace:^",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@nestjs/common": "^9.0.4",
     "@types/node": "^16.0.0",
+    "@types/rimraf": "^3",
     "@types/uuid": "^8",
-    "mobx-state-tree": "3.14.1",
+    "mobx-state-tree": "^5.1.5",
     "mongoose": "^6.2.10",
-    "typescript": "4.4.4"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@mui/material": "^5.9.1",
     "@mui/x-data-grid": "^4.0.0",
-    "mobx": "^5.0.0",
-    "mobx-react": "^6.0.0",
-    "mobx-state-tree": "^3.14.1",
+    "mobx": "^6.6.1",
+    "mobx-react": "^7.2.1",
+    "mobx-state-tree": "^5.1.5",
     "prop-types": "^15.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
