--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -27,9 +27,9 @@
     "setup": "rimraf .jbrowse && jbrowse create .jbrowse",
     "clean": "rimraf dist",
     "start": "yarn clean && npm-run-all --parallel start:watch start:server",
-    "start:watch": "yarn build:shared:esm && rollup --config --watch",
+    "start:watch": "JB_NPM=false NODE_ENV=development rollup --config --watch",
     "start:server": "serve --cors --listen 9000 .",
-    "build": "yarn build:shared:esm && yarn clean && rollup --config",
+    "build": "yarn build:shared && yarn clean && rollup --config",
     "browse": "cp jbrowse_config.json .jbrowse/config.json && serve --listen 8999 .jbrowse",
     "test": "jest",
     "test:e2e": "start-test \"npm-run-all --parallel start browse\" \"9000|8999\" \"npm-run-all cypress:run\"",
@@ -48,48 +48,49 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/plugin-linear-genome-view": "^1.7.4",
+    "@jbrowse/plugin-linear-genome-view": "^2.0.1",
+    "@mui/icons-material": "^5.8.4",
     "apollo-shared": "workspace:^",
     "clsx": "^1.1.1",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
-    "@jbrowse/core": "^1.7.4",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "mobx": "^5.10.1",
+    "@jbrowse/core": "^2.0.1",
+    "@mui/material": "^5.9.1",
+    "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "3.14.1",
-    "react": "^17.0.2"
+    "mobx-state-tree": "^5.1.5",
+    "react": "^17.0.2",
+    "tss-react": "^3.7.1"
   },
   "devDependencies": {
-    "@jbrowse/cli": "^1.7.4",
-    "@jbrowse/core": "^1.7.4",
-    "@jbrowse/development-tools": "^1.6.9",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@jbrowse/cli": "^2.0.1",
+    "@jbrowse/core": "^2.0.1",
+    "@jbrowse/development-tools": "^2.0.0",
+    "@mui/material": "^5.9.1",
     "@mui/x-data-grid": "^5.12.3",
     "@types/cypress": "^1.1.3",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
     "cypress": "^8.7.0",
     "jest": "^27.3.1",
-    "mobx": "^5.10.1",
+    "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "3.14.1",
+    "mobx-state-tree": "^5.1.5",
     "npm-run-all": "4.1.5",
     "react": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.59.0",
-    "serve": "^11.3.2",
+    "serve": "^14.0.1",
     "shx": "^0.3.3",
     "start-server-and-test": "^1.11.7",
     "ts-node": "^10.3.0",
-    "typescript": "4.4.4"
+    "tss-react": "^3.7.1",
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.1.0",
   "private": true
