--- a/packages/apollo-mst/tsconfig.json
+++ b/packages/apollo-mst/tsconfig.json
@@ -9,10 +9,9 @@
     "lib": ["ES2020", "DOM"],
     "module": "CommonJS",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
   },
   "include": ["./src"],
-  "references": [
-    { "path": "../apollo-mst"},
-    { "path": "../apollo-schemas"},
-  ]
 }
