--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "^2.0.1",
+    "apollo-mst": "workspace:^",
     "apollo-schemas": "workspace:^",
     "bson-objectid": "^2.0.3",
     "regenerator-runtime": "^0.13.9",
