--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -53,6 +53,7 @@
     "@gmod/gff": "^1.2.0",
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
     "@mui/icons-material": "^5.8.4",
+    "apollo-mst": "workspace:^",
     "apollo-shared": "workspace:^",
     "clsx": "^1.1.1",
     "regenerator-runtime": "^0.13.9",
