--- a/packages/apollo-schemas/package.json
+++ b/packages/apollo-schemas/package.json
@@ -5,10 +5,10 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@gmod/gff": "^1.2.0",
     "@nestjs/common": "^9.0.4",
     "@nestjs/core": "^9.0.4",
     "@nestjs/mongoose": "^9.0.2",
+    "apollo-mst": "workspace:^",
     "mongoose": "^6.2.6",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
