--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -10,6 +10,7 @@
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "^2.0.1",
     "apollo-schemas": "workspace:^",
+    "bson-objectid": "^2.0.3",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1",
     "uuid": "^8.3.2"
