--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -54,6 +54,7 @@
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
     "@mui/icons-material": "^5.8.4",
     "apollo-shared": "workspace:^",
+    "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
