Remove ApolloView, put Apollo logic on session

--- a/packages/jbrowse-plugin-apollo/jbrowse_config.json
+++ b/packages/jbrowse-plugin-apollo/jbrowse_config.json
@@ -37,7 +37,7 @@
     "name": "Apollo Demo",
     "views": [
       {
-        "type": "ApolloView"
+        "type": "LinearGenomeView"
       }
     ]
   }
