--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -42,11 +42,6 @@
   "jbrowse-plugin": {
     "name": "Apollo"
   },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "<rootDir>/cypress/"
-    ]
-  },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -65,30 +60,41 @@
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.1.5",
-    "react": "^17.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rxjs": "^6.5.2",
     "tss-react": "^3.7.1"
   },
   "devDependencies": {
     "@jbrowse/cli": "^2.0.1",
     "@jbrowse/core": "^2.0.1",
     "@jbrowse/development-tools": "^2.1.1",
+    "@jest/globals": "^29.0.3",
     "@mui/material": "^5.9.1",
     "@mui/x-data-grid": "^5.12.3",
     "@types/cypress": "^1.1.3",
     "@types/node": "^16.11.6",
+    "@types/prop-types": "^15",
     "@types/react": "^17.0.34",
+    "@types/react-dom": "^18",
     "cypress": "^8.7.0",
-    "jest": "^27.3.1",
+    "jest": "^29.0.3",
+    "jest-fetch-mock": "^3.0.3",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.1.5",
     "npm-run-all": "4.1.5",
-    "react": "^17.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.59.0",
+    "rxjs": "^6.5.2",
     "serve": "^14.0.1",
     "shx": "^0.3.3",
     "start-server-and-test": "^1.11.7",
+    "ts-jest": "^29.0.0",
     "ts-node": "^10.3.0",
     "tss-react": "^3.7.1",
     "typescript": "^4.7.4"
