--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   build:
-    name: Strict lint
+    name: Strict lint and test
     runs-on: ubuntu-latest
     steps:
       - name: Check out
