--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -32,6 +32,8 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.4",
+    "@nestjs/platform-socket.io": "^9.0.11",
+    "@nestjs/websockets": "^9.0.11",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "jwt-decode": "^3.1.2",
@@ -47,6 +49,7 @@
     "react-dom": "^17.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
+    "socket.io": "^4.5.2",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
