--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -57,6 +57,7 @@
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
     "regenerator-runtime": "^0.13.9",
+    "socket.io-client": "^4.5.2",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
