--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -45,6 +45,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pm2": "latest",
     "prop-types": "^15.0.0",
     "react-dom": "^17.0.0",
     "reflect-metadata": "^0.1.13",
