--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   build:
-    name: Strict lint
+    name: Strict lint and test
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -19,3 +19,5 @@ jobs:
           install-command: yarn --immutable
       - name: Lint codebase
         run: yarn eslint --report-unused-disable-directives --max-warnings 0 --ext .js,.ts,.jsx,.tsx .
+      - name: Test codebase
+        run: yarn test
