--- a/packages/jbrowse-plugin-apollo/jbrowse_config.json
+++ b/packages/jbrowse-plugin-apollo/jbrowse_config.json
@@ -26,13 +26,12 @@
   "internetAccounts": [
     {
       "type": "GoogleDriveOAuthInternetAccount",
-      "internetAccountId": "googleOAuth",
-      "name": "Google Drive",
-      "description": "Account to access Google Drive files",
+      "internetAccountId": "apolloGoogle",
+      "name": "Apollo Google",
+      "description": "Account to access Apollo with Google login",
       "clientId": "1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com",
       "domains": ["localhost:3999"],
-      "baseURL": "http://localhost:3999",
-      "authEndpoint": "http://localhost:3999/google/auth" 
+      "authEndpoint": "http://localhost:3999/auth/google/auth" 
     }
   ],
   "defaultSession": {
