--- a/packages/jbrowse-plugin-apollo/jbrowse_config.json
+++ b/packages/jbrowse-plugin-apollo/jbrowse_config.json
@@ -25,14 +25,17 @@
   ],
   "internetAccounts": [
     {
-      "type": "GoogleDriveOAuthInternetAccount",
-      "internetAccountId": "apolloGoogle",
-      "name": "Apollo Google",
-      "description": "Account to access Apollo with Google login",
-      "clientId": "1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com",
+      "type": "ApolloInternetAccount",
+      "internetAccountId": "apolloInternetAccount",
+      "name": "Demo Server",
+      "description": "A server hosting a small fictional organism to demonstrate Apollo capabilities",
       "domains": ["localhost:3999"],
-      "authEndpoint": "http://localhost:3999/auth/google/auth" ,
-      "scopes": "profile,email"
+      "baseURL": "http://localhost:3999",
+      "google": {
+        "authEndpoint": "http://localhost:3999/auth/google" ,
+        "clientId": "1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com",
+        "scopes": "profile,email"
+      }
     }
   ],
   "defaultSession": {
