--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -53,6 +53,7 @@
     "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "react-router-dom": "^6.4.2",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
   },
