--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^9.0.4",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
+    "express-session": "^1.17.3",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
@@ -55,6 +56,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1",
     "@types/jest": "^27.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
