--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.4",
+    "@types/passport-azure-ad": "^4.3.1",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "jwt-decode": "^3.1.2",
@@ -41,6 +42,8 @@
     "mongoose-id-validator": "^0.6.0",
     "multer": "^1.4.4",
     "passport": "^0.5.0",
+    "passport-azure-ad": "^4.3.4",
+    "passport-azure-ad-oauth2": "^0.0.4",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
