--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "eslint": "^7.5.0",
@@ -46,5 +47,8 @@
   "resolutions": {
     "typescript": "^4.7.4"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "passport-google-oauth20": "^2.0.0"
+  }
 }
