--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -32,9 +32,9 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.4",
-    "@types/passport-azure-ad": "^4.3.1",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
+    "express-session": "^1.17.3",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
@@ -43,7 +43,6 @@
     "multer": "^1.4.4",
     "passport": "^0.5.0",
     "passport-azure-ad": "^4.3.4",
-    "passport-azure-ad-oauth2": "^0.0.4",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -51,6 +50,7 @@
     "react-dom": "^17.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
+    "session-file-store": "^1.5.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
@@ -58,12 +58,15 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1",
     "@types/jest": "^27.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-azure-ad": "^4",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/session-file-store": "^1",
     "@types/supertest": "^2.0.11",
     "apollo-mst": "workspace:^",
     "jest": "^27.0.6",
