--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -45,6 +45,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-microsoft": "^1.0.0",
     "prop-types": "^15.0.0",
     "react-dom": "^17.0.0",
     "reflect-metadata": "^0.1.13",
@@ -63,6 +64,7 @@
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/passport-microsoft": "^0.0.0",
     "@types/supertest": "^2.0.11",
     "apollo-mst": "workspace:^",
     "jest": "^27.0.6",
