--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -14,11 +14,17 @@ FILE_UPLOAD_FOLDER = './test/uploaded'
 # Reference sequence chunk size (optional)
 # CHUNK_SIZE = 5000
 
-# Google client id, secret, callbackURL and scope. Separate score values MUST be comma separated
+# Google client id, secret, callbackURL and scope. Separate scope values MUST be comma separated
 GOOGLE_CLIENT_ID = '1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET = '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'
 GOOGLE_CALLBACK_URL = 'http://localhost:3999/auth/google/redirect'
 GOOGLE_SCOPE = 'profile,email'
+
+# Microsoft client id, secret, callbackURL and scope. Separate scope values MUST be comma separated
+MICROSOFT_CLIENT_ID = 'fabdd045-163c-4712-9d40-dbbb043b3090'
+MICROSOFT_CLIENT_SECRET = '~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M'
+MICROSOFT_CALLBACK_URL = 'http://localhost:3999/auth/microsoft/redirect'
+MICROSOFT_SCOPE = 'user.read'
 
 # Default new user role. Possible values are 'admin', 'readOnly' and 'user'
 DEFAULT_NEW_USER_ROLE = 'readOnly'
