--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -47,12 +47,14 @@
     "@emotion/styled": "^11.9.3",
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
     "@mui/icons-material": "^5.8.4",
+    "@rollup/plugin-image": "^3.0.1",
     "apollo-mst": "workspace:^",
     "apollo-shared": "workspace:^",
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "microsoft-login-button-react": "^1.0.1",
     "react-google-button": "^0.7.2",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
