--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^9.0.4",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
+    "express-session": "^1.17.3",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
@@ -41,6 +42,7 @@
     "mongoose-id-validator": "^0.6.0",
     "multer": "^1.4.4",
     "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.0.0",
@@ -54,9 +56,11 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1",
     "@types/jest": "^27.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
