--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -51,7 +51,9 @@
     "apollo-shared": "workspace:^",
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
+    "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "react-google-button": "^0.7.2",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.0.3"
   },
