--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -32,6 +32,8 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.4",
+    "@nestjs/platform-socket.io": "^9.2.0",
+    "@nestjs/websockets": "^9.2.0",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "express-session": "^1.17.3",
@@ -50,6 +52,7 @@
     "react-dom": "^17.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
+    "socket.io": "^4.5.3",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
