--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -55,6 +55,7 @@
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "regenerator-runtime": "^0.13.9",
+    "socket.io-client": "^4.5.3",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
