init version for user location broadcasting

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -28,3 +28,6 @@ MICROSOFT_SCOPE = 'user.read'
 
 # Default new user role. Possible values are 'admin', 'readOnly' and 'user'
 DEFAULT_NEW_USER_ROLE = 'readOnly'
+
+# Broadcast users locations (true OR false)
+BROADCAST_USER_LOCATION = true
