--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/core": "^2.1.4",
+    "@jbrowse/core": "^2.2.1",
     "apollo-mst": "workspace:^",
     "apollo-schemas": "workspace:^",
     "bson-objectid": "^2.0.3",
     "regenerator-runtime": "^0.13.9",
+    "socket.io-client": "^4.5.4",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
