--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -55,10 +55,11 @@
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "regenerator-runtime": "^0.13.9",
+    "socket.io-client": "^4.5.3",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
-    "@jbrowse/core": "^2.1.4",
+    "@jbrowse/core": "^2.2.1",
     "@mui/material": "^5.9.1",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
@@ -71,7 +72,7 @@
   },
   "devDependencies": {
     "@jbrowse/cli": "^2.0.1",
-    "@jbrowse/core": "^2.1.4",
+    "@jbrowse/core": "^2.2.1",
     "@jbrowse/development-tools": "^2.1.1",
     "@jest/globals": "^29.0.3",
     "@mui/material": "^5.9.1",
