Don't crash app when GFF3 export fails

--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -24,16 +24,16 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@nestjs/common": "^9.0.4",
+    "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.4",
+    "@nestjs/core": "^9.2.1",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^9.0.2",
+    "@nestjs/mapped-types": "^1.2.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.4",
-    "@nestjs/platform-socket.io": "^9.2.0",
-    "@nestjs/websockets": "^9.2.0",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/websockets": "^9.2.1",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "express-session": "^1.17.3",
