--- a/packages/apollo-collaboration-server/tsconfig.json
+++ b/packages/apollo-collaboration-server/tsconfig.json
@@ -12,6 +12,7 @@
     "incremental": true,
     "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": false,
+    "sourceMap": true
   },
   "references": [
     { "path": "../apollo-shared"},
