--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -12,6 +12,7 @@
     "apollo-mst": "workspace:^",
     "apollo-schemas": "workspace:^",
     "bson-objectid": "^2.0.3",
+    "jwt-decode": "^3.1.2",
     "regenerator-runtime": "^0.13.9",
     "socket.io-client": "^4.5.4",
     "tslib": "^2.3.1"
