--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -40,6 +40,7 @@
     "express-session": "^1.17.3",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.2.6",
     "mongoose-id-validator": "^0.6.0",
     "multer": "^1.4.4",
