--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -50,6 +50,7 @@
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.1.7",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.2.6",
     "mongoose-id-validator": "^0.6.0",
     "multer": "^1.4.4",
