Add new entries and validation to env file

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -1,33 +1,60 @@
-# Application start port
-APPLICATION_PORT = 3999
-# CORS setting
-CORS = true
-# Logger options. Possible values are : log, error, warn, debug, verbose
-LOGGER_OPTIONS = ["log", "error", "warn", "debug"]
+##############
+## REQUIRED ##
+##############
+
+# URL
+URL=http://localhost
 
 # MongoDB connection
-MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
+MONGODB_URI=mongodb://mongodb:27017/apolloDb
+# Alternatively, can be a path to a file with the URI
+# MONGODB_URI_FILE=/run/secrets/mongodb-uri
 
 # Output folder for uploaded files
-FILE_UPLOAD_FOLDER = './test/uploaded'
+FILE_UPLOAD_FOLDER=./test/uploaded
 
-# Reference sequence chunk size (optional)
-# CHUNK_SIZE = 5000
+##############################################################################
+## To enable users to log in, you need either (or both) Google or Microsoft ##
+## OAuth configured. Without them, only userless guest access is possible.  ##
+##############################################################################
 
-# Google client id, secret, callbackURL and scope. Separate scope values MUST be comma separated
-GOOGLE_CLIENT_ID = '1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET = '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'
-GOOGLE_CALLBACK_URL = 'http://localhost:3999/auth/google/redirect'
-GOOGLE_SCOPE = 'profile,email'
+# Google client id and secret.
+GOOGLE_CLIENT_ID=1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com
+# Alternatively, can be a path to a file with the client ID
+# GOOGLE_CLIENT_ID_FILE=/run/secrets/google-client-id
+GOOGLE_CLIENT_SECRET=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
+# Alternatively, can be a path to a file with the client secret
+# GOOGLE_CLIENT_SECRET_FILE=/run/secrets/google-client-secret
 
-# Microsoft client id, secret, callbackURL and scope. Separate scope values MUST be comma separated
-MICROSOFT_CLIENT_ID = 'fabdd045-163c-4712-9d40-dbbb043b3090'
-MICROSOFT_CLIENT_SECRET = '~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M'
-MICROSOFT_CALLBACK_URL = 'http://localhost:3999/auth/microsoft/redirect'
-MICROSOFT_SCOPE = 'user.read'
+# Microsoft client id and secret.
+MICROSOFT_CLIENT_ID=fabdd045-163c-4712-9d40-dbbb043b3090
+# Alternatively, can be a path to a file with the client ID
+# MICROSOFT_CLIENT_ID_FILE=/run/secrets/microsoft-client-id
+MICROSOFT_CLIENT_SECRET=~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M
+# Alternatively, can be a path to a file with the client secret
+# MICROSOFT_CLIENT_SECRET_FILE=/run/secrets/microsoft-client-secret
 
-# Default new user role. Possible values are 'admin', 'readOnly' and 'user'
-DEFAULT_NEW_USER_ROLE = 'readOnly'
+##############
+## OPTIONAL ##
+##############
 
-# Broadcast users locations (true OR false)
-BROADCAST_USER_LOCATION = true
+# Application port, defaults to 3999
+# PORT=3999
+
+# Enable all CORS requests, defaults to true
+# CORS=true
+
+# Comma-separated list of log levels to output
+# Possible values are: error, warn, log, debug, verbose.
+# Defaults to error,warn,log
+LOG_LEVELS=error,warn,log,debug
+
+# Reference sequence chunk size, defaults to 262144 (256 KiB)
+# CHUNK_SIZE=5000
+
+# Default new user role, possible values are admin, user, readOnly
+# Defaults to readOnly
+# DEFAULT_NEW_USER_ROLE=readOnly
+
+# Whether to broadcast users locations, defaults to true
+# BROADCAST_USER_LOCATION=true
