--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -1,5 +1,6 @@
 {
   "name": "apollo-shared",
+  "version": "0.0.1",
   "main": "./dist/index.js",
   "scripts": {
     "start": "tsc --build --watch",
