--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -11,6 +11,9 @@ MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
 # Output folder for uploaded files
 FILE_UPLOAD_FOLDER = './test/uploaded'
 
+# Ontology filename 
+ONTOLOGY_FILENAME = '../../test/data/obo-converted.json'
+
 # Reference sequence chunk size (optional)
 # CHUNK_SIZE = 5000
 
