--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -23,6 +23,9 @@ SESSION_SECRET=g9fGaRuw06T7hs960Tm7KYyfcFaYEIaG9jfFnVEQ4QyFXmq7
 # Alternatively, can be a path to a file with the session secret
 # SESSION_SECRET_FILE=/run/secrets/session-secret
 
+# Ontology filename
+ONTOLOGY_FILE = '../../test/data/obo-converted.json'
+
 ##############################################################################
 ## To enable users to log in, you need either (or both) Google or Microsoft ##
 ## OAuth configured. Without them, only userless guest access is possible.  ##
