--- a/package.json
+++ b/package.json
@@ -44,8 +44,5 @@
   "resolutions": {
     "typescript": "^4.7.4"
   },
-  "private": true,
-  "dependencies": {
-    "bionode-obo": "^0.1.1"
-  }
+  "private": true
 }
