--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -6,7 +6,7 @@
 URL=http://localhost
 
 # MongoDB connection
-MONGODB_URI=mongodb://mongodb:27017/apolloDb
+MONGODB_URI=mongodb://localhost:27017/apolloDb
 # Alternatively, can be a path to a file with the URI
 # MONGODB_URI_FILE=/run/secrets/mongodb-uri
 
@@ -58,3 +58,9 @@ LOG_LEVELS=error,warn,log,debug
 
 # Whether to broadcast users locations, defaults to true
 # BROADCAST_USER_LOCATION=true
+
+# Whether to allow guest users who do not have to log in, defaults to false
+ALLOW_GUEST_USER=true
+# If guest users are allowed, what role will they have
+# Possible values are admin, readOnly and user; defaults to readonly
+# GUEST_USER_ROLE=readOnly
