--- a/docker/.development.env
+++ b/docker/.development.env
@@ -14,3 +14,5 @@ GOOGLE_CLIENT_SECRET_FILE=/run/secrets/google-client-secret
 # Microsoft client id and secret.
 MICROSOFT_CLIENT_ID_FILE=/run/secrets/microsoft-client-id
 MICROSOFT_CLIENT_SECRET_FILE=/run/secrets/microsoft-client-secret
+
+JWT_SECRET_FILE=/run/secrets/jwt-secret
