--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -13,6 +13,11 @@ MONGODB_URI=mongodb://localhost:27017/apolloDb
 # Output folder for uploaded files
 FILE_UPLOAD_FOLDER=./test/uploaded
 
+# Secret used to encode JWT tokens
+JWT_SECRET=84b5edd3-6c4e-42f3-9711-2f294c07df19
+# Alternatively, can be a path to a file with the client secret
+# JWT_SECRET_FILE=/run/secrets/jwt-secret
+
 ##############################################################################
 ## To enable users to log in, you need either (or both) Google or Microsoft ##
 ## OAuth configured. Without them, only userless guest access is possible.  ##
