--- a/docker/.development.env
+++ b/docker/.development.env
@@ -5,7 +5,7 @@ URL=http://localhost
 MONGODB_URI_FILE=/run/secrets/mongodb-uri
 
 # Output folder for uploaded files
-FILE_UPLOAD_FOLDER=./test/uploaded
+FILE_UPLOAD_FOLDER=/data/uploads
 
 # Google client id and secret.
 GOOGLE_CLIENT_ID_FILE=/run/secrets/google-client-id
