Make new user have no role by default

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -57,9 +57,9 @@ LOG_LEVELS=error,warn,log,debug
 # Reference sequence chunk size, defaults to 262144 (256 KiB)
 # CHUNK_SIZE=5000
 
-# Default new user role, possible values are admin, user, readOnly
-# Defaults to readOnly
-# DEFAULT_NEW_USER_ROLE=readOnly
+# Default new user role, possible values are admin, user, readOnly, and none
+# Defaults to none
+# DEFAULT_NEW_USER_ROLE=none
 
 # Whether to broadcast users locations, defaults to true
 # BROADCAST_USER_LOCATION=true
