--- a/packages/jbrowse-plugin-apollo/jbrowse_config.json
+++ b/packages/jbrowse-plugin-apollo/jbrowse_config.json
@@ -33,13 +33,11 @@
       "baseURL": "http://localhost:3999",
       "google": {
         "authEndpoint": "http://localhost:3999/auth/google" ,
-        "clientId": "1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com",
-        "scopes": "profile,email"
+        "clientId": "1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com"
       },
       "microsoft": {
         "authEndpoint": "http://localhost:3999/auth/microsoft" ,
-        "clientId": "fabdd045-163c-4712-9d40-dbbb043b3090",
-        "scopes": "user.read"
+        "clientId": "fabdd045-163c-4712-9d40-dbbb043b3090"
       }
     }
   ],
