--- a/docker/.development.env
+++ b/docker/.development.env
@@ -16,3 +16,4 @@ MICROSOFT_CLIENT_ID_FILE=/run/secrets/microsoft-client-id
 MICROSOFT_CLIENT_SECRET_FILE=/run/secrets/microsoft-client-secret
 
 JWT_SECRET_FILE=/run/secrets/jwt-secret
+SESSION_SECRET=/run/secrets/session-secret
