--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -18,6 +18,11 @@ JWT_SECRET=84b5edd3-6c4e-42f3-9711-2f294c07df19
 # Alternatively, can be a path to a file with the client secret
 # JWT_SECRET_FILE=/run/secrets/jwt-secret
 
+# Secret used to encode express sessions
+SESSION_SECRET=g9fGaRuw06T7hs960Tm7KYyfcFaYEIaG9jfFnVEQ4QyFXmq7
+# Alternatively, can be a path to a file with the session secret
+# SESSION_SECRET_FILE=/run/secrets/session-secret
+
 ##############################################################################
 ## To enable users to log in, you need either (or both) Google or Microsoft ##
 ## OAuth configured. Without them, only userless guest access is possible.  ##
