--- a/docs/apollo.env
+++ b/docs/apollo.env
@@ -18,6 +18,11 @@ JWT_SECRET=some-secret-value
 # Alternatively, can be a path to a file with the client secret
 # JWT_SECRET_FILE=/run/secrets/jwt-secret
 
+# Secret used to encode express sessions
+SESSION_SECRET=some-other-secret-value
+# Alternatively, can be a path to a file with the session secret
+# SESSION_SECRET_FILE=/run/secrets/session-secret
+
 ##############################################################################
 ## To enable users to log in, you need either (or both) Google or Microsoft ##
 ## OAuth configured. Without them, only userless guest access is possible.  ##
