--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -42,6 +42,7 @@
     "apollo-common": "workspace:^",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
+    "connect-mongodb-session": "^3.1.1",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "material-ui-popup-state": "^5.0.4",
