--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-collaboration-server",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "",
   "author": "",
   "license": "Apache-2.0",
