--- a/packages/apollo-mst/package.json
+++ b/packages/apollo-mst/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-mst",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc"
