--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "apollo-mst",
+  "name": "apollo-common",
   "version": "1.0.0-alpha.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GMOD/Apollo3.git",
+    "directory": "packages/apollo-common"
+  },
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
-    "@jbrowse/core": "^2.3.4",
-    "mobx": "^6.6.1",
-    "mobx-state-tree": "^5.1.5",
-    "rxjs": "^6.0.0",
-    "tslib": "^2.3.1"
+    "@jbrowse/core": "^2.3.4"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
