Add module to use runtime plugins

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,6 +9,18 @@ packageExtensions:
   mongoose-id-validator@*:
     peerDependencies:
       mongoose: "*"
+  tss-react@*:
+    peerDependencies:
+      "@mui/material": "*"
+  "@jbrowse/core@*":
+    peerDependencies:
+      "@emotion/styled": "*"
+      "@emotion/react": "*"
+  material-ui-popup-state@*:
+    peerDependencies:
+      react-dom: "*"
+      "@emotion/styled": "*"
+      "@emotion/react": "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
