--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -69,3 +69,6 @@ ALLOW_GUEST_USER=true
 # If guest users are allowed, what role will they have
 # Possible values are admin, readOnly and user; defaults to readonly
 # GUEST_USER_ROLE=readOnly
+
+# Comma-separated list of Apollo plugins to use
+# PLUGIN_URLS=https://example.com/apollo-plugin-example.umd.production.min.js
