--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -23,7 +23,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@gmod/gff": "^1.2.0",
+    "@jbrowse/core": "^2.3.4",
+    "@mui/base": "^5.0.0-alpha.118",
+    "@mui/material": "^5.11.10",
     "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.1",
@@ -39,22 +44,28 @@
     "apollo-shared": "workspace:^",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
+    "material-ui-popup-state": "^5.0.4",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
+    "mobx-state-tree": "^5.1.7",
     "mongoose": "^6.2.6",
     "mongoose-id-validator": "^0.6.0",
     "multer": "^1.4.4",
+    "node-fetch": "^2.6.7",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-microsoft": "^1.0.0",
     "prop-types": "^15.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
+    "sanitize-filename": "^1.6.3",
     "socket.io": "^4.5.3",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "tss-react": "^4.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.2",
@@ -65,10 +76,12 @@
     "@types/jest": "^27.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/node-fetch": "^2.6.2",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/passport-microsoft": "^0.0.0",
+    "@types/react": "^17.0.34",
     "@types/supertest": "^2.0.11",
     "apollo-mst": "workspace:^",
     "jest": "^27.0.6",
