Allow plugin URLs to be in a file

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -72,3 +72,6 @@ ALLOW_GUEST_USER=true
 
 # Comma-separated list of Apollo plugins to use
 # PLUGIN_URLS=https://example.com/apollo-plugin-example.umd.production.min.js
+# Alternatively, can be a path to a file with a list of plugin URLs, one URL per
+# line
+# PLUGIN_URLS_FILE=/data/plugin-urls
