Create apollo-common package (#190)
* Add yarn version plugin

* Standardize versions

* Add new apollo-common package

* Move base classes to apollo-common

* Add ApolloPlugin to apollo-common

--- a/packages/apollo-common/tsconfig.json
+++ b/packages/apollo-common/tsconfig.json
@@ -5,15 +5,16 @@
     "incremental": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "target": "ES2020",
-    "lib": ["ES2020", "DOM"],
+    "target": "ES2019",
+    "lib": ["ES2019", "DOM"],
     "module": "CommonJS",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
   },
   "include": ["./src"],
   "references": [
-    { "path": "../apollo-mst"},
     { "path": "../apollo-schemas"},
-    { "path": "../apollo-common"},
   ]
 }
