--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-collaboration-server",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "",
   "author": "",
   "license": "Apache-2.0",
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/websockets": "^9.2.1",
+    "apollo-common": "workspace:^",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "express-session": "^1.17.3",
