Add module to load and use runtime plugins in Apollo (#191)
* Add module to use runtime plugins

* Fix yarn lockfile

* Allow plugin URLs to be in a file

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -69,3 +69,9 @@ ALLOW_GUEST_USER=true
 # If guest users are allowed, what role will they have
 # Possible values are admin, readOnly and user; defaults to readonly
 # GUEST_USER_ROLE=readOnly
+
+# Comma-separated list of Apollo plugins to use
+# PLUGIN_URLS=https://example.com/apollo-plugin-example.umd.production.min.js
+# Alternatively, can be a path to a file with a list of plugin URLs, one URL per
+# line
+# PLUGIN_URLS_FILE=/data/plugin-urls
