--- a/packages/apollo-shared/tsconfig.json
+++ b/packages/apollo-shared/tsconfig.json
@@ -15,5 +15,8 @@
     { "path": "../apollo-mst"},
     { "path": "../apollo-schemas"},
     { "path": "../apollo-common"},
-  ]
+  ],
+  "watchOptions": {
+    "excludeFiles": ["**/*.test.*"],
+  }
 }
