Fix feature copying, improve conversion of GFF3 to AnnotationFeature (#212)
* For Garrett...

* Only save phase in location, not attributes

* tmp

* ready for test

* Lint warnings cleared

* tmp commit

* Ready for test

* RefseqId vs RefseqName fix

* Reserved attribute key fixes

* Remove CopyFeatureChange

* Use local assembly info instead of fetching

* Cleanup

---------

Co-authored-by: Kyosti Sutinen <kyosti@ebi.ac.uk>

--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -65,6 +65,7 @@
     "rxjs": "^7.4.0",
     "sanitize-filename": "^1.6.3",
     "socket.io": "^4.5.3",
+    "stream-concat": "^1.0.0",
     "tslib": "^2.3.1",
     "tss-react": "^4.6.1"
   },
