--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,6 +16,11 @@ jobs:
           cache: yarn
       - name: Install
         run: yarn --immutable
+        # Have to build shared before linting so type-based lint rules can
+        # run correctly
+      - name: Build shared
+        run: yarn build
+        working-directory: packages/apollo-shared
       - name: Lint codebase
         run: yarn eslint --report-unused-disable-directives --max-warnings 0 --ext .js,.ts,.jsx,.tsx .
       - name: Test codebase
