--- a/packages/jbrowse-plugin-apollo/cypress/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/cypress/tsconfig.json
@@ -4,8 +4,6 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"],
     "strict": true,
-    "allowJs": true,
-    "noEmit": true
   },
-  "include": ["**/*.ts", "**/*.js"],
+  "include": ["**/*.ts"]
 }
