--- a/packages/jbrowse-plugin-apollo/tsconfig.eslint.json
+++ b/packages/jbrowse-plugin-apollo/tsconfig.eslint.json
@@ -5,5 +5,5 @@
     "noEmit": true,
     "allowJs": true
   },
-  "include": ["jest.config.js", "jestSetup.js", "rollup.config.js"],
+  "include": ["cypress.config.js", "jest.config.js", "jestSetup.js", "rollup.config.js"],
 }
