--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,13 @@
       "cwd": "${workspaceFolder}/packages/apollo-collaboration-server",
       "name": "Debug Collaboration Server",
       "request": "launch",
-      "runtimeArgs": ["start:debug"],
+      "runtimeArgs": [
+        "start:debug"
+      ],
       "runtimeExecutable": "yarn",
-      "skipFiles": ["<node_internals>/**"],
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
       "type": "node"
     },
     {
@@ -22,7 +26,7 @@
         "run",
         "--inspect-brk",
         "test",
-        "--runInBand",
+        "--runInBand"
       ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
@@ -49,6 +53,29 @@
         "<node_internals>/**",
         "**/.yarn/cache/**"
       ]
+    },
+    {
+      "type": "node",
+      "name": "vscode-jest-tests.v2",
+      "request": "launch",
+      "args": [
+        "test",
+        "--runInBand",
+        "--watchAll=false",
+        "--testNamePattern",
+        "${jest.testNamePattern}",
+        "--runTestsByPath",
+        "${jest.testFile}"
+      ],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "disableOptimisticBPs": true,
+      "runtimeExecutable": "yarn",
+      "skipFiles": [
+        "<node_internals>/**",
+        "**/.yarn/cache/**"
+      ]
     }
-  ]
+  ],
 }
