tsconfig and eslint fixes

--- a/packages/jbrowse-plugin-apollo/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/tsconfig.json
@@ -9,6 +9,8 @@
   "include": ["src"],
   "exclude": ["**/dist/"],
   "references": [
+    { "path": "../apollo-common"},
+    { "path": "../apollo-mst"},
     { "path": "../apollo-shared"},
   ],
 }
