--- a/packages/apollo-collaboration-server/tsconfig.json
+++ b/packages/apollo-collaboration-server/tsconfig.json
@@ -15,6 +15,8 @@
     "sourceMap": true
   },
   "references": [
+    { "path": "../apollo-common"},
+    { "path": "../apollo-schemas"},
     { "path": "../apollo-shared"},
   ],
 }
